Adding properties / set DataBinding view as start

--- a/fiori_report_278/webapp/manifest.json
+++ b/fiori_report_278/webapp/manifest.json
@@ -112,7 +112,7 @@
       }
     },
     "rootView": {
-      "viewName": "br.com.cliente.gestao.fiorireport278.view.App",
+      "viewName": "br.com.cliente.gestao.fiorireport278.view.DataBinding",
       "type": "XML",
       "async": true,
       "id": "App"
