--- a/fiori_report_278/webapp/manifest.json
+++ b/fiori_report_278/webapp/manifest.json
@@ -89,7 +89,7 @@
         "async": true,
         "viewPath": "br.com.cliente.gestao.fiorireport278.view",
         "controlAggregation": "pages",
-        "controlId": "app",
+        "controlId": "appID",
         "clearControlAggregation": false
       },
       "routes": [
