Databind the OData properties into a table

--- a/fiori_report_278/webapp/manifest.json
+++ b/fiori_report_278/webapp/manifest.json
@@ -95,14 +95,14 @@
       "routes": [
         {
           "name": "RouteLista",
-          "pattern": "Lista",
+          "pattern": "",
           "target": [
             "TargetLista"
           ]
         },
         {
           "name": "RouteDataBinding",
-          "pattern": "",
+          "pattern": "DataBinding",
           "target": [
             "DataBinding"
           ]
